# SRGAN-Application

./: Project links.txt  README.md
NoteBooks/: SRGAN_PRJECT_13_JAN_2022_ITI.ipynb
SRGAN APP/: app.py
SRGAN APP/static/images/savedImage/: iti.jfif
SRGAN APP/templates/: index.html  inference.html
SRGAN_Package/SRGAN/: MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.cfg
SRGAN_Package/SRGAN/SuperResolution_GANs.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SRGAN_Package/SRGAN/super_resolution_gans/: srgan_utils.py
