[metadata]
name = SuperResolution_GANs
version = 0.0.5
author = Abdullah Abdelhakeem
author_email = abdullah.abdelhakeem25@gmail.com
description = Super Resolution Image
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AbdullahAbdelhakeem6484/ITI_Graduation_Project1_SISR_BY_GAN
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

	
	
[options]
packages = find:
python_requires = >=3.7
include_package_data = True